# Connection-Prover

./: LICENSE  README.md  prover.cabal  stack.yaml
app/: Main.hs
fof1_problems/: JET001.pp  JET002.pp  JET003.pp  JET004.pp  JET005.pp  JET006.pp  JET007.pp  JET008.pp  JET009.pp  JET010.pp  JET011.pp  JET012.pp  JET013.pp  JET014.pp  JET015.pp  JET016.pp  SYN040+2.pp  SYN041+2.pp  SYN044+2.pp  SYN045+2.pp  SYN046+2.pp  SYN047+2.pp  SYN404+1.pp  SYN436+1.pp  SYN973+1.pp
prop1_problems/: SYJ101+1.pp  SYJ103+1.pp  SYJ104+1.pp  SYJ105+1.002.pp  SYJ105+1.004.pp  SYJ106+1.pp  SYJ107+1.001.pp  SYJ107+1.002.pp  SYJ107+1.003.pp  SYJ107+1.004.pp  SYN001+1.pp  SYN040+1.pp  SYN041+1.pp  SYN044+1.pp  SYN045+1.pp  SYN046+1.pp  SYN047+1.pp  SYN389+1.pp  SYN390+1.pp  SYN391+1.pp  SYN392+1.pp  SYN393+1.pp  SYN416+1.pp  SYN977+1.pp  SYN978+1.pp
src/: IOfunctions.hs  Parser.hs  Prover.hs  Tests.hs
test/: Spec.hs
