name:                prover
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/8BitMate/prover#readme
license:             BSD3
license-file:        LICENSE
author:              Asbjørn Gaarde
maintainer:          asbjorn_gaarde@hotmail.com
copyright:           2017 Asbjørn Gaarde
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prover
                     , Parser
                     , IOfunctions
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 6.2.0 && < 6.3
                     , containers >= 0.5.10.2 && < 0.5.11
                     , mtl >= 2.2.1 && < 2.3
                     , text >= 1.2.2.2 && < 2.3
  default-language:    Haskell2010

executable prover-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
  build-depends:       base
                     , prover
                     , text >= 1.2.2.2 && < 2.3
  default-language:    Haskell2010

test-suite prover-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , prover
                     , directory >= 1.3.0.0 && < 1.3.1
                     , text >= 1.2.2.2 && < 2.3
  ghc-options:         -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/8BitMate/prover
